avoiding text wrapping sometimes during print (typically, on timeslots)

--- a/public/dvfr2015/dvfr2015.css
+++ b/public/dvfr2015/dvfr2015.css
@@ -18231,6 +18231,10 @@ blockquote p {
     .show-for-print {
         display: inherit !important;
     }
+
+    .nowrap-if-print {
+        white-space: nowrap;
+    }
 }
 
 .text-left {
